[gd_scene load_steps=5 format=3 uid="uid://c1387qklm1uat"]

[ext_resource type="Script" path="res://game_over_screen.gd" id="1_aatuw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylm37"]
bg_color = Color(0.12549, 0.572549, 0.635294, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_de8is"]
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gc018"]
font_size = 90
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="GameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aatuw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.478431)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -708.0
offset_top = -387.0
offset_right = 708.0
offset_bottom = 387.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ylm37")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_de8is")

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -189.0
offset_right = 174.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
text = "Highscore: "
label_settings = SubResource("LabelSettings_gc018")

[node name="TimeSurvived" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -63.0
offset_right = 174.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
text = "Time Survived: "
label_settings = SubResource("LabelSettings_gc018")

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 111.0
offset_right = 69.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="MenuButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 197.0
offset_right = 69.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/MenuButton" to="." method="_on_menu_button_pressed"]
